--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,14 +18,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".episode.EpisodeActivity" />
         <activity android:name=".auth.AuthActivity" />
 
         <activity
             android:name=".settings.SettingsActivity"
             android:theme="@style/SettingsTheme" />
 
-        <activity android:name=".settings.AboutActivity"/>
-        <activity android:name=".settings.LicenseActivity"/>
+        <activity android:name=".settings.AboutActivity" />
+        <activity android:name=".settings.LicenseActivity" />
 
         <receiver android:name=".notification.ProgramReceiver" />
         <receiver android:name=".notification.TimerSetReceiver">
