--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,16 +15,15 @@
         <activity android:name=".top.TopActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".episode.EpisodeActivity" />
         <activity android:name=".auth.AuthActivity" />
-
         <activity
             android:name=".settings.SettingsActivity"
             android:theme="@style/SettingsTheme" />
-
         <activity android:name=".settings.AboutActivity" />
         <activity android:name=".settings.LicenseActivity" />
 
@@ -39,6 +38,7 @@
             </intent-filter>
         </receiver>
 
+        <activity android:name=".work.WorkActivity"></activity>
     </application>
 
 </manifest>
