デバッグビルドとリリースビルドでパッケージを分けるように設定

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.google.gms.google-services'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
@@ -9,6 +8,7 @@ android {
 
     defaultConfig {
         applicationId "me.kirimin.annictroid"
+        manifestPlaceholders = [appName:"@string/app_name"]
         minSdkVersion 16
         targetSdkVersion 23
         versionCode 40
@@ -16,6 +16,8 @@ android {
     }
     buildTypes {
         debug {
+            applicationIdSuffix ".debug"
+            manifestPlaceholders = [appName:"debug_annictroid"]
             buildConfigField "String", "CLIENT_ID", "\"${project.property("clientId")}\""
             buildConfigField "String", "CLIENT_SECRET", "\"${project.property("clientSecret")}\""
         }
@@ -26,6 +28,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
