--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,16 @@ android {
         }
     }
 
+    productFlavors {
+
+        mock {
+
+        }
+
+        production {
+        }
+    }
+
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
@@ -49,6 +59,7 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.0.2'
     compile 'com.squareup.retrofit2:converter-gson:2.0.2'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.0.2'
+    compile 'io.reactivex:rxkotlin:0.60.0'
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'io.reactivex:rxjava:1.1.3'
     compile 'com.google.code.gson:gson:2.4'
