--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,7 @@ dependencies {
     compile 'io.reactivex:rxjava:1.1.3'
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.jpardogo.materialtabstrip:library:1.0.6'
+    compile 'jp.wasabeef:recyclerview-animators:2.2.3'
 
     testCompile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     testCompile 'junit:junit:4.12'
