--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 24
+    compileSdkVersion 25
     buildToolsVersion '25.0.2'
 
     defaultConfig {
@@ -47,11 +47,11 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    compile 'com.android.support:support-v4:24.2.0'
-    compile 'com.android.support:appcompat-v7:24.2.0'
-    compile 'com.android.support:preference-v7:24.2.0'
-    compile 'com.android.support:design:24.2.0'
-    compile 'com.android.support:cardview-v7:24.2.0'
+    compile "com.android.support:support-v4:$support_lib_version"
+    compile "com.android.support:appcompat-v7:$support_lib_version"
+    compile "com.android.support:preference-v7:$support_lib_version"
+    compile "com.android.support:design:$support_lib_version"
+    compile "com.android.support:cardview-v7:$support_lib_version"
     compile 'com.google.firebase:firebase-analytics:9.0.0'
     compile 'com.google.firebase:firebase-crash:9.0.0'
     compile 'com.squareup.okhttp3:okhttp:3.3.1'
@@ -71,6 +71,7 @@ dependencies {
 }
 buildscript {
     ext.kotlin_version = '1.0.6'
+    ext.support_lib_version = '25.1.0'
     repositories {
         mavenCentral()
     }
